--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                         characters, plots on which you could build a pretty good movie and describe their everyday life
                         in
                         far too long essays. I thought about writing a book many times, but in the end I used the
-                        opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF
+                        opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target="blank"><b>PBF
                                 (play by forum)</b></a> forums to create long stories together with
                         other <b>people</b>. By the way, it was thanks to these people that I started designing websites
                         and
