--- a/projects.html
+++ b/projects.html
@@ -89,15 +89,15 @@
                         href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view" target="blank"><img
                             class="projects" src="images/coffee.gif" alt="Coffee Time!" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4:lorem-ipsum-dolor-sit-amet-consectetur-adipiscing-elit"
+                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view"
                         target="blank"><img class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4:contact"
+                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view"
                         target="blank"><img class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
             </div>
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view"
                         target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
                 <div class="col-lg-2 col-md-3 col-sm-4"><a
                         href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
