--- a/projects.html
+++ b/projects.html
@@ -89,10 +89,10 @@
                         href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view" target="blank"><img
                             class="projects" src="images/coffee.gif" alt="Coffee Time!" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view"
+                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4"
                         target="blank"><img class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view"
+                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4"
                         target="blank"><img class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
             </div>
             <div class="row">
