--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 
-<body style="background-image: url(images/backdropimg.jpeg);">
+<body>
     <section id="title">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
@@ -75,7 +75,7 @@
         <div style="text-align: center;">
             <div class="welcome">
                 <h1>Hi, My name is Agata.</h1>
-                <p>FRONTEND DEVELOPER</p>
+                <h4>FRONTEND DEVELOPER</h4>
             </div>
             <img id="blueshape" , src="images/welcome_page.png" ; alt="Decoration">
         </div>
@@ -111,24 +111,28 @@
                 Frontend gives me more pleasure than pure Java, and despite the ongoing course, I started to develop
                 more in
                 this direction. Below is a list of some of the skills I have learned.</p>
-            <div class="row skill_row left">
-                <div class="col-sm-4">
+            <div class="row skill_row">
+                <div class="col-4">
                     <p><b>HTML 5</b></p>
                     <p><b>CSS 3</b></p>
-                    <p><b>JavaScript ES6</b></p>
-                    <p><b>Bootstrap 4 / 5</b></p>
-                    <p><b>DOM Manipulation</b></p>
+                    <p><b>JavaScript(ES6)</b></p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-4">
+                    <p><b>Bootstrap 4/5</b></p>
+                    <p><b>DOM Manipulation</b></p>
                     <p><b>React.js</b></p>
+                </div>
+                <div class="col-4">
                     <p><b>Node.js</b></p>
                     <p><b>Web Design</b></p>
                     <p><b>Angular</b></p>
-                    <p><b>Canva</b></p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-4">
+                    <p><b>Canva</b></p>
                     <p><b>jQuery</b></p>
                     <p><b>Mongodb</b></p>
+                </div>
+                <div class="col-4">
                     <p><b>Design patterns</b></p>
                     <p><b>SQL</b></p>
                     <p><b>Github</b></p>
@@ -141,8 +145,8 @@
 
         <div class="container-sm">
             <h2>My Job Experience </h2>
-            <div class="row left">
-                <div class="col-7">
+            <div class="row">
+                <div class="col-lg-7 col-sm-7">
                     <div class="row">
                         <div class="col-4">
                             <p>10 / 2020 - 06 / 2021</p>
@@ -169,7 +173,9 @@
                             <p>Tattoo shop Intruz Ink</p>
                         </div>
                     </div>
+                    <br>
                     <h3>Volunteer</h3>
+                    <br>
                     <div class="row">
                         <div class="col-4">
                             <p>03 / 2018 - 09 / 2019</p>
@@ -189,7 +195,7 @@
                             My CV
                         </a></p>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5 col-sm-5">
                     <img id="backpack_img" src="images/job.png" ; alt="backpack">
                 </div>
             </div>
@@ -197,12 +203,13 @@
         <div class="container-sm">
             <h2>My hobbies </h2>
             <div class="row">
-                <div class="col-2">
+                <div class="col-lg-2 col-sm-6">
                     <img id="pencil_img" , src="images/pencil.png" ; alt="pencil"></div>
-                <div class="col-10">
+                <div class="col-lg-10 col-sm-6">
                     <p>Ever since I can remember, I've loved <a href="projects.html#digital_art"
                             target="blank"><b>drawing</b></a>. As a little girl, I used to scribble everything
-                        I could (seriously). My passion has developed over many years from <b>drawing, through various
+                        I could (seriously). My passion has developed over many years from <b>drawing, through
+                            various
                             types
                             of paints and other artistic materials</b>, to<a href="projects.html#digital_art"
                             target="blank"><b>digital art</b></a>, which I started to develop
@@ -214,23 +221,26 @@
                         forms of self-expression.</p>
                 </div>
 
-                <div class="col-10">
+                <div class="col-lg-10 col-sm-6">
                     <p>I have already mentioned that <a href="https://github.com/AgataJacyk"
                             target="blank"><b>programming</b></a> was my passion but what was developing at the same
                         time was <b>writing</b>. I've always had a vivid <b>imagination</b> full of ideas (and
                         fortunately
                         there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
-                        characters, plots on which you could build a pretty good movie and describe their everyday life
+                        characters, plots on which you could build a pretty good movie and describe their everyday
+                        life
                         in
                         far too long essays. I thought about writing a book many times, but in the end I used the
-                        opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target="blank"><b>PBF
+                        opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF
                                 (play by forum)</b></a> forums to create long stories together with
-                        other <b>people</b>. By the way, it was thanks to these people that I started designing websites
+                        other <b>people</b>. By the way, it was thanks to these people that I started designing
+                        websites
                         and
-                        I gained the courage to show my works to others. I learned to accept constructive criticism and
+                        I gained the courage to show my works to others. I learned to accept constructive criticism
+                        and
                         correct the mistakes pointed out.</p>
                 </div>
-                <div class="col-2"><img id="pc_img" , src="images/pc.png" ; alt="Desktop"></div>
+                <div class="col-lg-2 col-sm-6"><img id="pc_img" , src="images/pc.png" ; alt="Desktop"></div>
 
             </div>
         </div>
@@ -242,36 +252,43 @@
         <div class="container-sm" id="contact">
             <h2>Stay in Touch!</h2>
             <div class="row">
-                <div class="col-5">
-                    <p><b>Thank you for your time</b> reviewing my website. If you think that my skills and character
+                <div class="col-lg-5 col-12">
+                    <p><b>Thank you for your time</b> reviewing my website. If you think that my skills and
+                        character
                         correspond to the conditions prevailing in the company, I will be very glad if you
                         <b>contact</b>
-                        one of the indicated forms. In addition, <b>I will be grateful for every tip for improving</b>
+                        one of the indicated forms. In addition, <b>I will be grateful for every tip for
+                            improving</b>
                         my
-                        website, as I wrote earlier, I am at the beginning of my path with programming, so any comments
+                        website, as I wrote earlier, I am at the beginning of my path with programming, so any
+                        comments
                         on
                         improving the code will be a <b>valuable lesson</b>.
                         <br>Have a nice day!</p>
-                        <img src="images/sign.png" style="margin-top: 0%; padding-left: 30%; padding-top: 0%; width: 20rem;">
+                    <img src="images/sign.png" class="left_align_img">
                 </div>
-                <div class="col-2 right">
+                <div class="col-lg-3 col-sm-6">
                     <a href="https://www.linkedin.com/in/agata-jacyk-486259219/" target="blank">
-                        <p><b>LinkedIn </b> <i class="fab fa-linkedin"></i> </p>
+                        <b>LinkedIn </b> <i class="fab fa-linkedin"></i> <br>
                         <a href="https://github.com/AgataJacyk" target="blank">
-                            <p><b>GitHub </b> <i class="fab fa-github-square"></i> </p>
+                            <b>GitHub </b> <i class="fab fa-github-square"></i> <br>
                         </a>
                         <a href="mailto:agatajacyk.webdeveloper@gmail.com" target="blank">
-                            <p><b>GMail </b> <i class="far fa-envelope"></i> </p>
+                            <b>GMail </b> <i class="far fa-envelope"></i> <br>
                         </a>
-                        <a>
-                            <p><b>(+48) 661-470-335</b> <i class="fas fa-phone-square"></i></p>
+                        <a href="tel:+48661470335">
+                            <b>(+48) 661-470-335</b> <i class="fas fa-phone-square"></i><br>
                         </a>
                 </div>
-                <div class="col-5">
-                    <img id="contact_img" , src="images/contact.png">
+                <div class="col-lg-4 col-sm-6">
+                    <img class="contact_img" src="images/contact.png">
                 </div>
             </div>
         </div>
+    </div>
+    </div>
+    </div>
+    </div>
     </div>
     <footer>
         <div class="bottom_container">
