--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 
-<body style="background-image: url(images/backdropimg.jpeg);">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
@@ -97,7 +97,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view"
+                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
                         target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
                 <div class="col-lg-2 col-md-3 col-sm-4"><a
                         href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
