--- a/education.html
+++ b/education.html
@@ -36,7 +36,7 @@
     </script>
 </head>
 
-<body style="background-image: url(images/backdropimg.jpeg);">
+<body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html"><img src="favicon-32x32.png"></a>
@@ -72,72 +72,72 @@
     <div class="middle_container">
         <div class="container-sm">
             <h2>Education </h2>
-            <div class="row left">
-                <div class="col-7">
+            <div class="row">
+                <div class="col-7 col-sm-9">
                     <h3>University</h3>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>21 / 03 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p> WSB University in Gdansk - Informatics - Specialisation: Frontend Developer</p>
                         </div>
                     </div>
                     <h3>Programming Classes</h3>
                     <div class="row">
-                        <div class="col-3">
-                            <p>15 / 08 / 2020-  20 / 03 / 2021</p>
+                        <div class="col-4">
+                            <p>15 / 08 / 2020 - <br> 20 / 03 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p>Software Development Academy - Java </p>
                         </div>
                         <h3>Udemy Classes</h3>
                     </div>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>13 / 06 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p>Java Programming Masterclass covering Java 11 & Java 17 - Tim Buchalka</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>27 / 07 / 2021</p>
                             </th>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p> The Complete 2021 Web Development Bootcamp - Dr. Angela Yu</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>1 / 07 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p>Programming in JavaScript - Bartłomiej Borowczyk</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>27 / 08 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p> Complete Web & Mobile Designer in 2021: UI/UX, Figma, +more - Andrei Neagoie, Daniel
                                 Schifano</p>
                         </div>
                     </div>
                     <h3>Additional Activities</h3>
                     <div class="row">
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>15 / 08 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p>100 days of design</p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-4">
                             <p>25 / 08 / 2021</p>
                         </div>
-                        <div class="col-9">
+                        <div class="col-8">
                             <p>Five Minute Korean for Beginners</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-5 col-sm-3">
                     <img id="books" src="images/education.png" ; alt="books">
                 </div>
             </div>
