--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,9 @@
                 <div class="col-lg-3 col-md-4 col-sm-6"><a href="index.html"><img class="projects"
                             src="images/mypage.gif" alt="MyPage" /></a></div>
             </div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://agatajacyk.github.io/DiceGame/dicee.html"><img class="projects"
+                src="images/dicegame.gif" alt="DiceGame" /></a></div>
+</div>
             <h3>Design</h3>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
@@ -118,20 +121,24 @@
             <h3 id="digital_art">Digital Art</h3>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOjg8B_vLpY6-0yARcOq_QyuhoOa4zMECDbfGoz"
+                    href="https://imgur.com/a/S6ZQzcV"
+                    target="blank"><img class="projects_art" src="images/prettysavage.gif" alt="Pretty Savage" /></a>
+            </div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a
+                        href="https://imgur.com/4OvFIS8"
                         target="blank"><img class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipO9WwPT3h9LDfR8KhMoCQ4XShjSHagFZu9IWxSs"
+                        href="https://imgur.com/4Ad3Oim"
                         target="blank"><img class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipNNs47EIEdxQpsc_30QU04_ZrFmdCkjNegroSU8"
+                        href="https://imgur.com/MF0dXry"
                         target="blank"><img class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipOHYBjWyeddnqCgUepxU7uGnFMkrEYuaFG80RQx"
+                        href="https://imgur.com/SOdIw9p"
                         target="blank"><img class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
                 <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://photos.google.com/album/AF1QipMfZqAjKt2Vgodz_m2b0j2skbdfy9ykc3MQEMVE/photo/AF1QipMl5HATImT29f_sCc9Etj9DfOdkSZJ1_mNaM-Kz"
+                        href="https://imgur.com/NMVwCGI"
                         target="blank"><img class="projects_art" src="images/2.jpg" alt="Forest" /></div>
             </div>
         </div>
