--- a/projects.html
+++ b/projects.html
@@ -75,73 +75,66 @@
             <h3>Websites</h3>
             <div class="row">
                 <div class="col-lg-3 col-md-4 col-sm-6"><a href="index.html"><img class="projects"
-                            src="images/mypage.gif" alt="MyPage" /></a></div>  
-            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://agatajacyk.github.io/DiceGame/dicee.html"><img class="projects"
-                src="images/dicegame.gif" alt="DiceGame" /></a></div>
+                            src="images/mypage.gif" alt="MyPage" /></a></div>
+                <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://agatajacyk.github.io/DiceGame/dicee.html"><img
+                            class="projects" src="images/dicegame.gif" alt="DiceGame" /></a></div>
             </div>
-          </div>
-            <h3>Design</h3>
-            <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view" target="blank"><img
-                            class="projects" src="images/AnimalCare.gif" alt="Animal Care and Adoption" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view" target="blank"><img
-                            class="projects" src="images/savetheocean.gif" alt="Save the Ocean" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view" target="blank"><img
-                            class="projects" src="images/coffee.gif" alt="Coffee Time!" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4"
-                        target="blank"><img class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4"
-                        target="blank"><img class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
-            </div>
-            <div class="row">
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
-                            class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-                <div class="col-lg-2 col-md-3 col-sm-4"><a
-                        href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
-                        target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
-            </div>
-            <h3 id="digital_art">Digital Art</h3>
-            <div class="row">
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                    href="https://imgur.com/a/S6ZQzcV"
-                    target="blank"><img class="projects_art" src="images/prettysavage.gif" alt="Pretty Savage" /></a>
-            </div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://imgur.com/4OvFIS8"
-                        target="blank"><img class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a>
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://imgur.com/4Ad3Oim"
-                        target="blank"><img class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://imgur.com/MF0dXry"
-                        target="blank"><img class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://imgur.com/SOdIw9p"
-                        target="blank"><img class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
-                <div class="col-lg-3 col-md-4 col-sm-6"><a
-                        href="https://imgur.com/NMVwCGI"
-                        target="blank"><img class="projects_art" src="images/2.jpg" alt="Forest" /></div>
-            </div>
+        <h3>Design</h3>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnYXknqaU/9TnoCoA_xEYmyEkjjOd5kA/view" target="blank"><img
+                        class="projects" src="images/AnimalCare.gif" alt="Animal Care and Adoption" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnkuq_PB4/Uz0A2SWZfQSpfB6bYAAhTg/view" target="blank"><img
+                        class="projects" src="images/savetheocean.gif" alt="Save the Ocean" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnGgN2PcM/DshDjMqp0aHDiA4nTjH_fA/view" target="blank"><img
+                        class="projects" src="images/coffee.gif" alt="Coffee Time!" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEnWaplKqc/XdCAucwC7FMNXkwqJs_I_w/view?website#4"
+                    target="blank"><img class="projects" src="images/icecream.gif" alt="Ice Cream Shop" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a
+                    href="https://www.canva.com/design/DAEoZ3n40n0/cNZQuqPqZy89_niJ7I0ZjQ/view?website#4"
+                    target="blank"><img class="projects" src="images/mountain.gif" alt="monstera" /></a></div>
         </div>
+        <div class="row">
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEobrMIrNc/q9Dh5XfoykZwXlaa5p41hg/view" target="blank"><img
+                        class="mobile" src="images/bedtime.gif" alt="bedtime stories" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+            <div class="col-lg-2 col-md-3 col-sm-4"><a
+                    href="https://www.canva.com/design/DAEoC7E4glA/pzBHMINNiuidT5OIxEBDEw/view?utm_content=DAEoC7E4glA&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton#1"
+                    target="blank"><img class="mobile" src="images/yoga.gif" alt="YogApp" /></a></div>
+        </div>
+        <h3 id="digital_art">Digital Art</h3>
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/a/S6ZQzcV" target="blank"><img
+                        class="projects_art" src="images/prettysavage.gif" alt="Pretty Savage" /></a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/4OvFIS8" target="blank"><img
+                        class="projects_art" src="images/charleeprof.png" alt="OC Charlee" /></a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/4Ad3Oim" target="blank"><img
+                        class="projects_art" src="images/noname.png" alt="OC Sam" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/MF0dXry" target="blank"><img
+                        class="projects_art" src="images/1.jpg" alt="Girl" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/SOdIw9p" target="blank"><img
+                        class="projects_art" src="images/5.jpg" alt="Wizard" /></a></div>
+            <div class="col-lg-3 col-md-4 col-sm-6"><a href="https://imgur.com/NMVwCGI" target="blank"><img
+                        class="projects_art" src="images/2.jpg" alt="Forest" /></div>
+        </div>
+    </div>
     </div>
     </div>
     </div>
