--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                 How my path to the place where I am today looked like made me aware and "who i am" a lot.
                 <br>Finally, I feel like I'm in the right place and I'm developing in a field that really interests me.
             </p>
-            <p>If you want to know anything about me, <a href="index.html#contact"><b>ask me</b></a>. Contact me is <a
-                    href="index.html#contact"><b>at the bottom of this page</b></a>.</p>
+            <p>If you want to know anything about me, <a href="index.html#contact"><b>ask me</b></a>. Contact me is at the bottom of this page.</p>
             <p class="text-end"><a href="education.html" target="blank">
                     More about my education
                 </a></p>
@@ -224,7 +223,7 @@
                 <div class="col-lg-10 col-sm-6">
                     <p>I have already mentioned that <a href="https://github.com/AgataJacyk"
                             target="blank"><b>programming</b></a> was my passion but what was developing at the same
-                        time was <b>writing</b>. I've always had a vivid <b>imagination</b> full of ideas (and
+                        time was writing. I've always had a vivid imagination full of ideas (and
                         fortunately
                         there are still quite a few of them). I loved <b>creating</b> amazing stories of imaginary
                         characters, plots on which you could build a pretty good movie and describe their everyday
@@ -233,7 +232,7 @@
                         far too long essays. I thought about writing a book many times, but in the end I used the
                         opportunities provided by<a href="https://pl.wikipedia.org/wiki/Play_by_forum" target=""><b>PBF
                                 (play by forum)</b></a> forums to create long stories together with
-                        other <b>people</b>. By the way, it was thanks to these people that I started designing
+                        other people. By the way, it was thanks to these people that I started designing
                         websites
                         and
                         I gained the courage to show my works to others. I learned to accept constructive criticism
@@ -292,12 +291,7 @@
     </div>
     <footer>
         <div class="bottom_container">
-            <a href="https://www.linkedin.com/in/agata-jacyk-486259219/" target="blank"><i class="fab fa-linkedin"></i>
-                linkedIn</a> <a href="https://github.com/AgataJacyk" target="blank"><i class="fab fa-github-square"></i>
-                github </a> <a href="mailto:agatajacyk.webdeveloper@gmail.com" target="blank"><i
-                    class="far fa-envelope"></i> gmail </a>
-            <br>
-            <br>
+            
             <p><a><i class="far fa-copyright"> Copyrights Agata Jacyk</i></a></p>
         </div>
     </footer>
